gcc/testsuite/gdc.test/compilable/gdc253.d
import imports.gdc253a;

class C253 : C253a
{
    void test253() { }
}

